test/files/neg/t12892.check
Test.scala:3: error: incompatible type in overriding
def m(): B (defined in trait B)
  with <defaultmethod> def m(): A (defined in trait A);
  (note that def m(): B (defined in trait B) is abstract,
  and is therefore overridden by concrete <defaultmethod> def m(): A (defined in trait A))
  def u = new B {}
              ^
1 error
